# automcqgen

./: README.md  Streamlitapp3.py  Streamlitapp4.py  main.py  pyproject.toml  requirements.txt  response.json  setup.py  streamlitAPP.py  streamlitapp2.py
.agent/workflows/: activate-venv.md
experiment/: biologyquestions.csv  mcq.ipynb
src/mcqgenerator/: logger.py  mcqgen.py  utils.py
