[project]
name = "automcqgen"
version = "0.1.0"
description = "Automatically generate multiple choice questions from a text file"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "groq>=0.37.1",
    "langchain>=1.2.10",
    "langchain-groq>=1.1.2",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
]
